[gd_scene load_steps=11 format=2]

[ext_resource path="res://Actors/heros/Sakura/sakura.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/waveSystem/spawner.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/UpgradeSystem/UpgradeHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/Camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/RewardHandler/RewardHandler.gd" type="Script" id=5]
[ext_resource path="res://game/levels/level.gd" type="Script" id=6]
[ext_resource path="res://objects/TransitionShader/TransitionRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/UI/RestartButton/RestartButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Camera/PlayerCamera.tscn" type="PackedScene" id=9]

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="HeroContainer" type="Node2D" parent="."]

[node name="Sakura" parent="HeroContainer" instance=ExtResource( 1 )]
position = Vector2( 346, 1854 )
z_index = 1

[node name="Camera2D" parent="HeroContainer/Sakura" instance=ExtResource( 9 )]
position = Vector2( 6, 2 )

[node name="WaveSpawner" parent="." instance=ExtResource( 2 )]

[node name="RewardHandler" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="RestartButton" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false

[node name="Ui" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionRect" parent="CanvasLayer/Ui" instance=ExtResource( 7 )]
visible = false
color = Color( 0.211765, 0.211765, 0.211765, 1 )

[node name="UpgradeHandler" parent="CanvasLayer/Ui" instance=ExtResource( 3 )]
pause_mode = 2
visible = false
position = Vector2( 0, -1 )

[node name="LevelLabel" type="Label" parent="CanvasLayer/Ui"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "test test test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.780392, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" parent="." instance=ExtResource( 4 )]
current = false
amplitude = 7.0

[node name="Timer" type="Timer" parent="."]
wait_time = 10000.0
one_shot = true
autostart = true
